--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "autoprefixer": "^9.6.1",
     "browser-sync": "^2.26.7",
     "del": "^5.0.0",
-    "glyphhanger": "^3.2.0",
     "gulp": "^4.0.2",
     "gulp-csso": "^3.0.1",
     "gulp-ext-replace": "^0.3.0",
@@ -31,6 +30,8 @@
     "gulp-postcss": "^8.0.0",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
+    "gulp-ttf2woff": "^1.1.1",
+    "gulp-ttf2woff2": "^3.0.0",
     "gulp-uglify": "^3.0.2",
     "imagemin-webp": "^5.1.0",
     "node-normalize-scss": "^8.0.1"
